# COMP342_LAB

./: .gitignore  README.md  requirements.txt
GravSim/: .gitignore  CMakeLists.txt  README.md
GravSim/src/: Main.cpp
GravitySimulator/: CMakeLists.txt  GravitySimulator  README.md
GravitySimulator/src/: Body.cpp  Body.h  Camera.cpp  Camera.h  PhysicsEngine.cpp  PhysicsEngine.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  UI.cpp  UI.h  main.cpp
LAB1/: drawing_name.py  resolution.py
LAB2/: BLA.py  DDA.py  LineGraph.py  Midpoint_circle.py  Piechart.py
LAB3/: 2D_Transformation.py  Composite_Transformation.py  Ellipse.py
LAB4/: cohen_sutherland.py  liang_barsky.py  sutherland_hodgemann.py
LAB5/: 3d_transformation.py  orthographic_projection.py
